--- a/ScrumApplication.Web/Views/Project/CreateBacklog.cshtml
+++ b/ScrumApplication.Web/Views/Project/CreateBacklog.cshtml
@@ -17,6 +17,8 @@
         <div class="row">
             <div class="col-md-6">
                 @Html.HiddenFor(model => model.Backlog.ProjectId)
+                @Html.HiddenFor(model => model.ViewSortBy)
+                @Html.HiddenFor(model => model.ViewSprintNo)
 
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
