--- a/ScrumApplication.Web/Views/Team/ChangeManager.cshtml
+++ b/ScrumApplication.Web/Views/Team/ChangeManager.cshtml
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" onclick="return confirm('Are you sure you want to resignation from this position?');" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
